--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -5,7 +5,7 @@ spring:
   aop:
     proxy-target-class: true
   application:
-    name: zuul-server
+    name: zuul
   
 eureka:
   instance:
@@ -15,7 +15,7 @@ eureka:
   client:
     registryFetchIntervalSeconds: 1
     serviceUrl:
-      defaultZone: http://localhost:8761/eureka/
+      defaultZone: http://ec2-3-120-208-177.eu-central-1.compute.amazonaws.com:8761/eureka/
     register-with-eureka: true
     fetch-registry: true
 
@@ -41,7 +41,7 @@ hystrix:
 
 zuul:
   routes:
-    uaa-server:
+    uaa:
       path: /uaa/**
       #url: http://192.168.0.157:9999
       sensitiveHeaders:
